[package]
name = "docs_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde = "1"
chrono = "0.4" # Used for setting DateTimes
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
futures = "0.3"
tracing-subscriber = "0.3.17"
tracing = { version = "0.1.37", features = ["log"] }
env_logger = "0.10.0"
serde_json = "1.0"

[dependencies.mongodb]
version = "2.6.0"
features = ["tokio-sync"]